--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
-Main/Formulas/lSection/__pycache__/
+Main/Formulas/hSection/__pycache__/__init__.cpython-39.pyc
+Main/Formulas/iSection/__pycache__/__init__.cpython-39.pyc
+Main/Formulas/tSection/__pycache__/__init__.cpython-39.pyc
+Main/Formulas/uSection/__pycache__/__init__.cpython-39.pyc
