--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Main/Formulas/hSection/__pycache__/__init__.cpython-39.pyc
 Main/Formulas/iSection/__pycache__/__init__.cpython-39.pyc
 Main/Formulas/tSection/__pycache__/__init__.cpython-39.pyc
 Main/Formulas/uSection/__pycache__/__init__.cpython-39.pyc
+Main/Formulas/lSection/__pycache__/__init__.cpython-39.pyc
