--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Main/Formulas/iSection/__pycache__/__init__.cpython-39.pyc
 Main/Formulas/tSection/__pycache__/__init__.cpython-39.pyc
 Main/Formulas/uSection/__pycache__/__init__.cpython-39.pyc
 Main/Formulas/lSection/__pycache__/__init__.cpython-39.pyc
+Main/__pycache__/widgets.cpython-39.pyc
+*.pyc
