--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ Main/sections/cSection/__pycache__/__init__.cpython-39.pyc
 Main/__pycache__/widgets.cpython-39.pyc
 *.pyc
 Main/run_fibra.py
+Main/sections/lSection/__pycache__/__init__.cpython-39.pyc
+Main/sections/lSection/__pycache__/__init__.cpython-39.pyc
+Main/sections/lSection/__pycache__/__init__.cpython-39.pyc
