--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ Main/run_fibra.py
 Main/sections/lSection/__pycache__/__init__.cpython-39.pyc
 Main/sections/lSection/__pycache__/__init__.cpython-39.pyc
 Main/sections/lSection/__pycache__/__init__.cpython-39.pyc
+Main/sections/iSection/__pycache__/__init__.cpython-39.pyc
+Main/sections/iSection/__pycache__/__init__.cpython-39.pyc
+Main/sections/tSection/__pycache__/__init__.cpython-39.pyc
