--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
+            "program": "${main.py}",
             "console": "integratedTerminal",
-            "cwd": "Main"
+            "cwd": "Main/main.py"
         }
     ]
 }
